# STM-Recruitment-Assignment

EpipolarLines/: CMakeLists.txt  epipolarLines.cpp
FundamentalMatrixEstimation/: CMakeLists.txt  eightPointAlgorithm.cpp
NormalizedEightPointAlgorithm/: CMakeLists.txt  normalizedEightPointAlgorithm.cpp
